TFP-2212 tar inn vedtaksperioder og bruker disse i saldoutregningen